# Pink-Lemonade

./: .env.example  .gitignore  .replit  100_PERCENT_COMPLETION_REPORT.md  AI_EXECUTIVE_SUMMARY.md  AI_IMPLEMENTATION_ROADMAP.md  AI_OPTIMIZATION_STRATEGY.md  AI_OPTIMIZER_IMPLEMENTATION.md  AI_SMART_MATCH_DIAGNOSTIC_REPORT.md  AI_SMART_MATCH_FUNCTIONALITY_REPORT.md  AI_SYSTEM_ANALYSIS_REPORT.md  AI_SYSTEM_WIREFRAME.md  CLIENT_ONBOARDING_GUIDE.md  CODE_RECOMMENDATIONS_AI_MATCH_FIX.md  COMPETITIVE_PRICING_STRATEGY.md  COMPLETION_ASSESSMENT.md  COMPLETION_PLAN.md  CONSULTANT_QUALITY_IMPLEMENTATION_COMPLETE.md  CONSULTANT_QUALITY_STATUS.md  CREDENTIAL_SETUP_INSTRUCTIONS.md  DEMO_CONFIGURATION.md  DEPLOYMENT.md  DEPLOYMENT_FIX.md  Dockerfile.backend  Dockerfile.frontend  FILES_TO_MODIFY_AI_MATCH_FIX.md  FINAL_COMPLETION_REPORT.md  FUNCTIONALITY_TEST_REPORT.md  FUNDRAISER_EXECUTIVE_SUMMARY.md  FUNDRAISER_GUIDE.md  FUNDRAISER_QUICK_START.md  GRANTFLOW_STATUS_REPORT.md  GRANT_MATCHING_AND_SMART_TOOLS_GUIDE.md  GRANT_MATCHING_EXCELLENCE_STRATEGY.md  GRANT_MATCHING_SYSTEM.md  GRANT_MATCHING_SYSTEM_COMPLETE_TECHNICAL_DOCUMENTATION.md  GRANT_MATCHING_WORKFLOW_GUIDE.md  GRANT_PLATFORM_COMPLETE_GUIDE.md  GRANT_SYSTEM_ARCHITECTURE.md  HONEST_INTEGRATION_ASSESSMENT.md  (+197 more)
app/: __init__.py  auth_integration.py  auth_wrapper.py  config.py  db_operations.py  models.py  models_extended.py  models_payment.py  models_templates.py  pages.py  routes.py
attached_assets/: Pasted--2-Grant-Management-Dashboard-Implement-a-comprehensive-dashboard-with-a-Grant-Tracking--1746503915637.txt  (+46 more)
(+589 files in other folders)
